<resources>
    <string name="app_name">MyСontacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>